--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,31 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="br.com.ricardolonga.mercadinho"
-    android:versionCode="1"
-    android:versionName="1.0" >
+	      package="br.com.ricardolonga.mercadinho"
+	      android:versionCode="1"
+	      android:versionName="1.0">
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="19" />
+    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="20" />
 
-    <instrumentation
-        android:name="android.test.InstrumentationTestRunner"
-        android:targetPackage="br.com.ricardolonga.mercadinho" />
+    <instrumentation android:name="android.test.InstrumentationTestRunner" android:targetPackage="br.com.ricardolonga.mercadinho" />
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
-        <activity
-            android:name=".ItensActivity"
-            android:label="@string/app_name" >
+    <application android:allowBackup="true"
+		         android:icon="@drawable/ic_launcher"
+		         android:label="@string/app_name" 
+		         android:name="br.com.ricardolonga.mercadinho.shared.MercadinhoApplication"
+		         android:theme="@style/AppTheme">
+
+        <activity android:name="br.com.ricardolonga.mercadinho.telainicial.ListaDeComprasActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <activity android:name="br.com.ricardolonga.mercadinho.teladetalhes.DetalhesActivity" android:label="@string/title_activity_detalhes" />
 
         <uses-library android:name="android.test.runner" />
     </application>
