--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,7 @@
 	      android:versionCode="1"
 	      android:versionName="1.0">
 
-    <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="20" />
+    <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="20" />
 
     <instrumentation android:name="android.test.InstrumentationTestRunner" android:targetPackage="br.com.ricardolonga.mercadinho" />
 
@@ -12,7 +12,7 @@
 		         android:icon="@drawable/ic_launcher"
 		         android:label="@string/app_name" 
 		         android:name="br.com.ricardolonga.mercadinho.shared.MercadinhoApplication_"
-		         android:theme="@style/AppBaseTheme">
+		         android:theme="@android:style/Theme.Holo.Light">
 
         <activity android:name="br.com.ricardolonga.mercadinho.telainicial.ListaDeComprasActivity_" android:label="@string/app_name">
             <intent-filter>
