--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	      package="br.com.ricardolonga.mercadinho"
 	      android:versionCode="1"
-	      android:versionName="1.0">
+	      android:versionName="1.0" xmlns:tools="http://schemas.android.com/tools">
 
     <uses-sdk android:minSdkVersion="11" android:targetSdkVersion="20" />
 
